fix bugs on IE

--- a/src/components/appContent/appContent.scss
+++ b/src/components/appContent/appContent.scss
@@ -1,9 +1,7 @@
 .app {
-    height: 100vh;
-
     &__content, &__loader, &__error {
         display: flex;
-        height: 100%;
+        height: 100vh;
     }
 
     &__content {
